refactor to use setup.py, separated cli from package logic

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+.pytest_cache/
+
+
+# Distribution
+*.egg-info/
+*.egg
+
+# Data files
 *.csv
+
+# IDE settings
+.vscode/
